# Python_core_project.py

./: Clean_folder.py  Dockerfile  Main_menu.py  Notes.py  Python_core_Team_3.py  pyproject.toml
