[tool.poetry]
name = "web-hw-2"
version = "0.1.0"
description = ""
authors = ["YevhenKoss <kossik89@gmail.com>"]
readme = "README.md"
#packages = [{include = "web_hw_2"}]

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.37"
console-menu = "^0.7.1"
termcolor = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
